fixed syntax, commented out broken notebook

--- a/examples/user_guide/Selecting_Genes_with_Boruta.ipynb
+++ b/examples/user_guide/Selecting_Genes_with_Boruta.ipynb
@@ -1798,7 +1798,7 @@
     "boruta_result = gsf.operations.boruta_prospector(\n",
     "    agem, \n",
     "    estimator=selecting_model, \n",
-    "    annotation_variables=[\"Treatment\"],\n",
+    "    annotation_variables=\"Treatment\",\n",
     "    max_iter=2,\n",
     "    perc=95)"
    ]
@@ -2011,10 +2011,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
