--- a/examples/user_guide/plotting_guide/Gene_vs_Counts.ipynb
+++ b/examples/user_guide/plotting_guide/Gene_vs_Counts.ipynb
@@ -1771,7 +1771,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# selected_genes = counts.isel(Gene=np.argsort(counts.mean(dim=\"Sample\").values)[-10:])[\"Gene\"].values\n",
