--- a/examples/user_guide/Selecting_Genes_with_Boruta.ipynb
+++ b/examples/user_guide/Selecting_Genes_with_Boruta.ipynb
@@ -1795,7 +1795,7 @@
    ],
    "source": [
     "%%time\n",
-    "boruta_result = gsf.operations.boruta_prospector(\n",
+    "boruta_result = gsf.operations.BorutaProspector(\n",
     "    agem, \n",
     "    estimator=selecting_model, \n",
     "    annotation_variables=\"Treatment\",\n",
@@ -1909,7 +1909,7 @@
     "boruta_gsc = gsf.GeneSetCollection(gem=agem)\n",
     "\n",
     "for target in tqdm([\"Treatment\", \"Genotype\", \"Subspecies]):\n",
-    "    boruta_treatment_ds = gsf.operations.boruta_prospector(\n",
+    "    boruta_treatment_ds = gsf.operations.BorutaProspector(\n",
     "        agem,\n",
     "        estimator=selecting_model,\n",
     "        annotation_variables=target,\n",
@@ -1931,7 +1931,7 @@
     "# boruta_gsc = gsf.GeneSetCollection(gem=agem)\n",
     "\n",
     "# for target in tqdm([\"Treatment\", \"Genotype\", \"Subspecies\"]):\n",
-    "#     boruta_treatment_ds = gsf.operations.boruta_prospector(\n",
+    "#     boruta_treatment_ds = gsf.operations.BorutaProspector(\n",
     "#         agem,\n",
     "#         estimator=selecting_model,\n",
     "#         annotation_variables=[target],\n",
