--- a/examples/plot_gallery/Volcano_of_Differential_Gene_Expression_Results.ipynb
+++ b/examples/plot_gallery/Volcano_of_Differential_Gene_Expression_Results.ipynb
@@ -2504,7 +2504,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2566,104 +2570,6 @@
    "source": [
     "gsf.plots.results.Volcano(deg_gs)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### View help for `Volcano`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[0;31mInit signature:\u001b[0m \u001b[0mgsf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplots\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresults\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mVolcano\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mDocstring:\u001b[0m     \n",
-       "params(label_selected_genes=Boolean, log_fold_change_cutoff=Number, log_fold_change_var=String, p_value_cutoff=Number, p_value_var=String, source=Parameter, apply_default_opts=Boolean, backend=ObjectSelector, name=String)\n",
-       "\n",
-       "    A volcano plot for examining differential gene expression results.\n",
-       "\n",
-       "    Parameters\n",
-       "    ----------\n",
-       "    data : xr.Dataset\n",
-       "        Data containing the log-fold change and p-value variables.\n",
-       "\n",
-       "    log_fold_change_var : str\n",
-       "        The name of the log-fold change column. Must be a variable within `data`.\n",
-       "\n",
-       "    p_value_var : str\n",
-       "        The name of the p-value column. Must be a variable within `data`.\n",
-       "\n",
-       "    p_value_cutoff : float\n",
-       "        Cutoff to use in grouping and coloring genes. Defaults to 2.0.\n",
-       "\n",
-       "    p_value_cutoff : float\n",
-       "        Cutoff to use in grouping and coloring genes. Defaults to 1e-6.\n",
-       "\n",
-       "    label_selected_genes : bool\n",
-       "        Apply (if True) annotations of genes that pass both the log-fold-change and p-value cutoff values.\n",
-       "\n",
-       "    apply_default_opts : bool\n",
-       "        Whether to apply the default styling.\n",
-       "\n",
-       "    Returns\n",
-       "    -------\n",
-       "    volcano scatter plot : holoviews.Overlay\n",
-       "        A holoviews scatter plot of log-fold-change versus -log10(p-values).\n",
-       "    \n",
-       "\u001b[1;32mParameters of 'Volcano'\n",
-       "=======================\n",
-       "\u001b[0m\n",
-       "\u001b[1;31mParameters changed from their default values are marked in red.\u001b[0m\n",
-       "\u001b[1;36mSoft bound values are marked in cyan.\u001b[0m\n",
-       "C/V= Constant/Variable, RO/RW = ReadOnly/ReadWrite, AN=Allow None\n",
-       "\n",
-       "\u001b[1;34mName                     Value       Type       Bounds    Mode  \u001b[0m\n",
-       "\n",
-       "apply_default_opts        True     Boolean      (0, 1)    V RW  \n",
-       "backend                   None  ObjectSelector            V RW  \n",
-       "label_selected_genes     False     Boolean      (0, 1)    V RW  \n",
-       "log_fold_change_cutoff    2.0       Number                V RW  \n",
-       "log_fold_change_var       None      String              V RW AN \n",
-       "p_value_cutoff           1e-06      Number                V RW  \n",
-       "p_value_var               None      String              V RW AN \n",
-       "source                    None    Parameter             V RW AN \n",
-       "\n",
-       "\u001b[1;32mParameter docstrings:\n",
-       "=====================\u001b[0m\n",
-       "\n",
-       "\u001b[1;34mapply_default_opts:     Whether to apply the default styling based on the current backend.\u001b[0m\n",
-       "\u001b[1;31mbackend:                The selected plotting backend to use for display. Options are [\"bokeh\", \"matplotlib\"].\u001b[0m\n",
-       "\u001b[1;34mlabel_selected_genes:   < No docstring available >\u001b[0m\n",
-       "\u001b[1;31mlog_fold_change_cutoff: < No docstring available >\u001b[0m\n",
-       "\u001b[1;34mlog_fold_change_var:    < No docstring available >\u001b[0m\n",
-       "\u001b[1;31mp_value_cutoff:         < No docstring available >\u001b[0m\n",
-       "\u001b[1;34mp_value_var:            < No docstring available >\u001b[0m\n",
-       "\u001b[1;31msource:                 < No docstring available >\u001b[0m\n",
-       "\u001b[0;31mFile:\u001b[0m           ~/github/gsforge/GSForge/plots/results/_volcano.py\n",
-       "\u001b[0;31mType:\u001b[0m           ParameterizedMetaclass\n",
-       "\u001b[0;31mSubclasses:\u001b[0m     \n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "gsf.plots.results.Volcano?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
   }
  ],
  "metadata": {
@@ -2683,6 +2589,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.1"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
