--- a/examples/how_to_galleries/core_guides/Selecting_Genes_with_Boruta.ipynb
+++ b/examples/how_to_galleries/core_guides/Selecting_Genes_with_Boruta.ipynb
@@ -1896,7 +1896,7 @@
     "\n",
     "For running more than one boruta model in the notebook, we recommend creating them in a loop, and adding them to a collection, as demonstrated below.\n",
     "\n",
-    "Although if you want to run many different models, you should strongl consider using the [nextflow workflows](workflow_guide/workflow_guide.ipynb)."
+    "Although if you want to run many different models, you should strongly consider using the [nextflow workflows](workflow_guide/workflow_guide.ipynb)."
    ]
   },
   {
@@ -1918,75 +1918,6 @@
     "    boruta_gsc.gene_sets[target] = gsf.GeneSet(boruta_treatment_ds, name=f\"Boruta_{target}\")\n",
     "    \n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from tqdm.notebook import tqdm\n",
-    "\n",
-    "# boruta_gsc = gsf.GeneSetCollection(gem=agem)\n",
-    "\n",
-    "# for target in tqdm([\"Treatment\", \"Genotype\", \"Subspecies\"]):\n",
-    "#     boruta_treatment_ds = gsf.operations.BorutaProspector(\n",
-    "#         agem,\n",
-    "#         estimator=selecting_model,\n",
-    "#         annotation_variables=[target],\n",
-    "#         max_iter=50)\n",
-    "    \n",
-    "#     boruta_gsc.gene_sets[target] = gsf.GeneSet(boruta_treatment_ds, name=f\"Boruta_{target}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can then view the collection and its gene sets:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# boruta_gsc"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Then you can save the results to a directory. Note that this does not save a copy of your GEM."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/tyler/GSForge_demo_data/osfstorage/boruta_gene_sets/Boruta_Treatment.nc\n",
-      "/home/tyler/GSForge_demo_data/osfstorage/boruta_gene_sets/Boruta_Genotype.nc\n",
-      "/home/tyler/GSForge_demo_data/osfstorage/boruta_gene_sets/Boruta_Subspecies.nc\n"
-     ]
-    }
-   ],
-   "source": [
-    "# boruta_gsc.save(BORUTA_COLL_PATH)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
    ]
   }
  ],
