--- a/examples/plot_gallery/Gene_vs_Counts.ipynb
+++ b/examples/plot_gallery/Gene_vs_Counts.ipynb
@@ -2786,7 +2786,11 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2801,14 +2805,7 @@
    ],
    "source": [
     "ax = sns.stripplot(x=\"Gene\", y=\"counts\", data=data, hue=\"Treatment\");\n",
-    "ax.xaxis.set_tick_params(rotation=90)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
+    "ax.xaxis.set_tick_params(rotation=90)\n"
    ]
   }
  ],
@@ -2833,10 +2830,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
