--- a/examples/tutorials/walkthroughs/oryza_sativa/05-Selecting_Genes_with_Boruta.ipynb
+++ b/examples/tutorials/walkthroughs/oryza_sativa/05-Selecting_Genes_with_Boruta.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Selecting Genes with Boruta and Random Forests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "*This notebook descbites howo to select genes (features) of importance using Random Forests through the Boruta algorithm.*\n",
     "\n",
     "**Background information**:\n",
@@ -1547,9 +1554,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import xarray as xr\n",
     "\n",
     "import holoviews as hv\n",
     "hv.extension(\"bokeh\")\n",
@@ -1581,7 +1585,7 @@
    "outputs": [],
    "source": [
     "# OS-independent path management.\n",
-    "from os import fspath, environ\n",
+    "from os import  environ\n",
     "from pathlib import Path"
    ]
   },
@@ -2739,16 +2743,7 @@
     }
    ],
    "source": [
-    "boruta_gsc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# OUTPUT_DIR"
+    "boruta_gsc\n"
    ]
   },
   {
@@ -2784,16 +2779,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
-  },
-  "pycharm": {
-   "stem_cell": {
-    "cell_type": "raw",
-    "metadata": {
-     "collapsed": false
-    },
-    "source": []
-   }
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
