tour run updated

--- a/docs/source/walkthroughs/oryza_sativa/06-Selecting_Genes_with_Boruta.ipynb
+++ b/docs/source/walkthroughs/oryza_sativa/06-Selecting_Genes_with_Boruta.ipynb
@@ -66,8 +66,7 @@
    "outputs": [],
    "source": [
     "OSF_PATH = Path(environ.get(\"GSFORGE_DEMO_DATA\", default=\"~/GSForge_demo_data/osfstorage/oryza_sativa\")).expanduser()\n",
-    "NORMED_GEM_PATH = OSF_PATH.joinpath(\"AnnotatedGEMs\", \"oryza_sativa_hydro_hisat2_normed.nc\")\n",
-    "assert HYDRO_GEM_PATH.exists()"
+    "NORMED_GEM_PATH = OSF_PATH.joinpath(\"AnnotatedGEMs\", \"oryza_sativa_hisat2_normed.nc\")"
    ]
   },
   {
