--- a/docs/source/walkthroughs/oryza_sativa/06-Selecting_Genes_with_Boruta.ipynb
+++ b/docs/source/walkthroughs/oryza_sativa/06-Selecting_Genes_with_Boruta.ipynb
@@ -1617,11 +1617,11 @@
     "import pandas as pd\n",
     "import umap, umap.plot\n",
     "\n",
-    "from sklearn import preprocessing, model_selection\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.multioutput import MultiOutputClassifier, ClassifierChain\n",
-    "from sklearn.multiclass import OneVsRestClassifier, OneVsOneClassifier, OutputCodeClassifier\n",
-    "from sklearn.metrics import roc_curve, auc, roc_auc_score, plot_roc_curve\n",
+    "# from sklearn import preprocessing, model_selection\n",
+    "# from sklearn.ensemble import RandomForestClassifier\n",
+    "# from sklearn.multioutput import MultiOutputClassifier, ClassifierChain\n",
+    "# from sklearn.multiclass import OneVsRestClassifier, OneVsOneClassifier, OutputCodeClassifier\n",
+    "# from sklearn.metrics import roc_curve, auc, roc_auc_score, plot_roc_curve\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import holoviews as hv\n",
@@ -2285,7 +2285,7 @@
    "source": [
     "## Boruta Feature Selection\n",
     "\n",
-    "Here we try to find all relevant features for our sample annotations of interest. This takes a few minutes to run."
+    "Here we try to find all relevant features for our sample annotations of interest."
    ]
   },
   {
@@ -2318,7 +2318,7 @@
     "            estimator=rf_mdl_01,\n",
     "            annotation_variables=target,\n",
     "            perc=100,\n",
-    "            max_iter=1000)\n",
+    "            max_iter=10)\n",
     "\n",
     "        boruta_gsc[f\"Boruta_{target}\"] = gsf.GeneSet(boruta_treatment_ds, name=f\"Boruta_{target}\")"
    ]
@@ -2347,230 +2347,6 @@
    "source": [
     "boruta_gsc"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2dea2113-08a5-4ace-977f-c5966181e193",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sel_counts, labels = gsf.get_gem_data(\n",
-    "    boruta_gsc, \n",
-    "    annotation_variables=['treatment', 'genotype', 'time'],\n",
-    "    selected_gene_sets=['treatment', 'genotype'],\n",
-    ")\n",
-    "mapper = umap.UMAP(densmap=True, random_state=50, metric='manhattan').fit(sel_counts.values)\n",
-    "fig, axes = plt.subplots(1, 3, figsize=(21, 7))\n",
-    "umap.plot.points(mapper, labels=labels['treatment'], background='black', ax=axes[0], color_key_cmap='Set1');\n",
-    "umap.plot.points(mapper, labels=labels['genotype'], background='black', ax=axes[1], color_key_cmap='Set2');\n",
-    "umap.plot.points(mapper, labels=labels['time'], background='black', ax=axes[2], color_key_cmap='plasma');"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d7db6c9-35bf-43cc-900b-07bc6119de89",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sel_counts, labels = gsf.get_gem_data(\n",
-    "    boruta_gsc, \n",
-    "    annotation_variables=['treatment', 'genotype', 'time'],\n",
-    "    selected_gene_sets=['treatment'],\n",
-    ")\n",
-    "mapper = umap.UMAP(densmap=True, random_state=50, metric='manhattan').fit(sel_counts.values)\n",
-    "fig, axes = plt.subplots(1, 3, figsize=(21, 7))\n",
-    "umap.plot.points(mapper, labels=labels['treatment'], background='black', ax=axes[0], color_key_cmap='Set1');\n",
-    "umap.plot.points(mapper, labels=labels['genotype'], background='black', ax=axes[1], color_key_cmap='Set2');\n",
-    "umap.plot.points(mapper, labels=labels['time'], background='black', ax=axes[2], color_key_cmap='plasma');"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6df4e66f-56ff-4076-87f5-0a8e8c2102be",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sel_counts, labels = gsf.get_gem_data(\n",
-    "    boruta_gsc, \n",
-    "    annotation_variables=['treatment', 'genotype', 'time'],\n",
-    "    selected_gene_sets=['genotype'],\n",
-    ")\n",
-    "mapper = umap.UMAP(densmap=True, random_state=50, metric='manhattan').fit(sel_counts.values)\n",
-    "fig, axes = plt.subplots(1, 3, figsize=(21, 7))\n",
-    "umap.plot.points(mapper, labels=labels['treatment'], background='black', ax=axes[0], color_key_cmap='Set1');\n",
-    "umap.plot.points(mapper, labels=labels['genotype'], background='black', ax=axes[1], color_key_cmap='Set2');\n",
-    "umap.plot.points(mapper, labels=labels['time'], background='black', ax=axes[2], color_key_cmap='plasma');"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "da838e25-9a94-49ca-afb3-0e77d6397710",
-   "metadata": {},
-   "source": [
-    "## Further Analysis\n",
-    "\n",
-    "While the above (appears) to work well for selecting features that inform our labels, we\n",
-    "do not yet have any information as to which feature informs which annotation, or a measure of that effect.\n",
-    "\n",
-    "For these wrappers we will need to create one-hot embeddings of our labels."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b40bc17a-996c-4a89-9e93-082f56f2b083",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sel_counts, labels = gsf.get_gem_data(\n",
-    "    boruta_gsc, \n",
-    "    annotation_variables=['treatment', 'genotype', 'time'],\n",
-    "    selected_gene_sets=['genotype', 'treatment'],\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8dd1060-c33f-4e62-b9ef-3c828a8ad449",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "treatment_labels = labels.treatment.to_series().unique()\n",
-    "treatment_enc = preprocessing.OneHotEncoder().fit(labels.treatment.values[:, np.newaxis])\n",
-    "treatment_onehot = treatment_enc.transform(labels.treatment.values[:, np.newaxis]).toarray()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ef39fad-f3ec-43b8-bd81-5c27bfc02d6d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_train, x_test, y_train, y_test = model_selection.train_test_split(\n",
-    "    sel_counts.values, treatment_onehot)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1714134b-4996-4859-830f-738f84347efc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "multi_out_cls = MultiOutputClassifier(rf_mdl_01).fit(x_train, y_train)\n",
-    "multi_out_cls_score = multi_out_cls.predict_proba(x_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5cc015f-7ea8-4b7e-830f-53cf342803d9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fpr = dict()\n",
-    "tpr = dict()\n",
-    "roc_auc = dict()\n",
-    "\n",
-    "for i, label in enumerate(treatment_labels):\n",
-    "    fpr[label], tpr[label], _ = roc_curve(y_test[:, i], multi_out_cls_score[i][:, 0])\n",
-    "    roc_auc[label] = auc(fpr[label], tpr[label])\n",
-    "\n",
-    "roc_curves = {class_: hv.Curve((tpr[class_], fpr[class_]))\n",
-    "              for class_ in treatment_labels}\n",
-    "\n",
-    "hv.NdOverlay(roc_curves).opts(padding=0.05, legend_position=\"right\", width=650, height=450)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9924a8cf-0698-4112-976e-d42dffeb4cf1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rf_mdl_01"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "667dd36e-5fbb-44a3-bc03-ee92dd42c501",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "multi_out_cls.estimators_[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d82c94e-9788-44e0-b84e-c1f806fa9dc3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# treatment_nFDR = gsf.operations.nFDR(\n",
-    "#     boruta_gsc,\n",
-    "#     selected_gene_sets=['genotype', 'treatment'],\n",
-    "#     gene_set_mode=\"union\",\n",
-    "#     annotation_variables=[\"treatment\"],\n",
-    "#     model=multi_out_cls.estimators_[0],\n",
-    "#     n_iterations=5\n",
-    "# )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7607176a-5780-4ff2-b7ec-3e3af0c33d10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# treatment_feature_importance = gsf.operations.RankGenesByModel(\n",
-    "#     boruta_gsc,\n",
-    "#     selected_gene_sets=['genotype', 'treatment'],\n",
-    "#     gene_set_mode=\"union\",\n",
-    "#     annotation_variables=[\"treatment\"],\n",
-    "#     model=multi_out_cls.estimators_[0],\n",
-    "#     n_iterations=5\n",
-    "# )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f46f61c-5f1c-4237-a13c-7c42416db9ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# MultiOutputClassifier()\n",
-    "\n",
-    "# ClassifierChain()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "230e49b2-09bc-4292-ba52-18be0bbd24ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# OneVsRestClassifier, OneVsOneClassifier, OutputCodeClassifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a961216-ee64-49eb-bc71-cfd47fc2b69a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
